--- a/package.json
+++ b/package.json
@@ -9,11 +9,14 @@
         "url": "https://vsnth.dev"
     },
     "dependencies": {
+        "chalk": "^5.3.0",
+        "configstore": "^6.0.0",
         "dotenv": "^16.0.3",
-        "openai": "^3.2.1",
-        "tsx": "^3.12.6"
+        "openai": "^3.3.0",
+        "ora": "^6.3.1"
     },
     "devDependencies": {
+        "@types/configstore": "^6.0.0",
         "@types/node": "^18.16.0"
     }
 }
